--- a/package.json
+++ b/package.json
@@ -6,9 +6,19 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "axios": "^0.19.0",
     "react": "^16.12.0",
+    "react-debounce-input": "^3.2.2",
     "react-dom": "^16.12.0",
-    "react-scripts": "3.3.0"
+    "react-grid-system": "^6.0.7",
+    "react-lines-ellipsis": "^0.14.1",
+    "react-paginate": "^6.3.2",
+    "react-router-dom": "^5.1.2",
+    "react-scripts": "3.3.0",
+    "react-spinners": "^0.7.2",
+    "styled-components": "^4.4.1",
+    "styled-system": "^5.1.4",
+    "styled-tools": "^1.7.1"
   },
   "scripts": {
     "start": "react-scripts start",
